# branch_reasoning

./: H100_3b_config.yaml  L40_1.5b_config.yaml  README.md  countdown_task.py  create_and_push_dataset.py  generate_completions.py  get_models_and_tokenizers.py  hf_generate_text.py  instructions.txt  prompts.py  pyproject.toml  requirements.txt  setup.py  train_branch.py
branch_reasoning/: __init__.py  config.py  log_probs.py  prompt_completion_dataset.py  reuse_completions.py
branch_reasoning/countdown_task/: __init__.py  generator.py  templates.py
branch_reasoning/generation/: __init__.py  branching.py  completions.py  text_generation.py  vllm_completions.py  vllm_generation.py
branch_reasoning/models/: model_loader.py
branch_reasoning/prompts/: __init__.py  branch_factor_2.py  branch_factor_3.py  branch_factor_4.py  no_branches.py  prompts.py
branch_reasoning/scoring/: __init__.py  completion_scorer.py  scoring_functions.py
branch_reasoning/training/: __init__.py  get_optimizer_and_scheduler.py  train_grpo.py  train_grpo_distributed.py  trainer.py
branch_reasoning/utils/: countdown_task.py  prompts.py  utils.py
data/: merged_branches.jsonl  no_branch_examples.jsonl
references/: trainer.py
scripts/: _train_multi_gpu_batch.py  config.yaml  create_and_push_dataset.py  finetune.py  test_tokenizer.py  test_vllm.py  train_branch.py  train_branch_vllm.py  train_multi_gpu.py  train_single_gpu.py
tests/: test_branching.py  test_completion_scorer.py  test_log_probs.py  test_pack_into_return_datatypes.py  test_scoring_functions.py  test_text_generation.py
